# coxwave-chatbot

./: .gitignore  pyproject.toml
EDA/: EDA.ipynb
coxwave_chatbot/: pyproject.toml
docker/: Dockerfile
naver_smart_store_center/: manage.py
naver_smart_store_center/naver_smart_store_center/: asgi.py  settings.py  urls.py  wsgi.py
