[project]
name = "coxwave-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Taehyung Gil",email = "xogud1231@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "coxwave_chatbot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
